# Python_Testing

./: .coverage  pyproject.toml  server.py
flake-report/: index.html
locust/: locustfile.py
templates/: booking.html  clubs.html  index.html  welcome.html
tests/: conftest.py
tests/tests_integration/: test_booking_places_process.py  test_login_logout.py
tests/tests_unit/: test_book.py  test_get_list_of_clubs.py  test_purchase_places.py  test_show_summary.py
